--- a/views/components/side-menu.ejs
+++ b/views/components/side-menu.ejs
@@ -79,7 +79,7 @@
             </button>
             <div id="userMenu" class="dropdown-menu user-menu-dropdown">
                 <a href="/profile" class="menu-item">Profile</a>
-                <button class="menu-item logout-item">Logout</button>
+                <button class="menu-item logout-item" id="logoutBtn">Logout</button>
             </div>
         </div>
     </div>
