--- a/views/create_user.ejs
+++ b/views/create_user.ejs
@@ -479,7 +479,7 @@
                 },
                 {
                     field: 'phoneNumber',
-                    rule: ['required', 'phone'],
+                    rule: ['required'],
                     message: 'Phone number is required.'
                 },
                 {
