--- a/views/update_case.ejs
+++ b/views/update_case.ejs
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="page-actions">
-                    <% if (user && user.role === 'superadmin') { %>
+                    <% if (user && user.role != 'doctor') { %>
                         <button class="btn btn-delete" id="deleteCaseBtn">Delete Case</button>
                     <% } %>
                 </div>
