fixed error when missing file type

--- a/views/update_case.ejs
+++ b/views/update_case.ejs
@@ -332,32 +332,32 @@
                             <p class="upload-instructions">Please click on the images below to upload photos</p>
                             <div class="photo-grid">
                                 <div class="photo-row">
-                                    <div class="photo-upload face-photo" data-type="frontal" style="background-image: url('<%= normal_case_files[3].file_type === 'front' ? normal_case_files[3].signedurl : '/assets/images/full-face-front.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="frontal" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'front', 'Choose File') %>">
+                                    <div class="photo-upload face-photo" data-type="frontal" style="background-image: url('<%= normal_case_files && normal_case_files[3] && normal_case_files[3].file_type === 'front' ? normal_case_files[3].signedurl : '/assets/images/full-face-front.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="frontal" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'front', 'Choose File') : 'Choose File' %>">
                                     </div>
-                                    <div class="photo-upload face-photo" data-type="smile" style="background-image: url('<%= normal_case_files[4].file_type === 'smiling' ? normal_case_files[4].signedurl : '/assets/images/full-smiling-face.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="smile" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'smiling', 'Choose File') %>">
+                                    <div class="photo-upload face-photo" data-type="smile" style="background-image: url('<%= normal_case_files && normal_case_files[4] && normal_case_files[4].file_type === 'smiling' ? normal_case_files[4].signedurl : '/assets/images/full-smiling-face.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="smile" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'smiling', 'Choose File') : 'Choose File' %>">
                                     </div>
-                                    <div class="photo-upload face-photo" data-type="profile" style="background-image: url('<%= normal_case_files[5].file_type === 'right_side' ? normal_case_files[5].signedurl : '/assets/images/right-side-profile.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="profile" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'right_side', 'Choose File') %>">
+                                    <div class="photo-upload face-photo" data-type="profile" style="background-image: url('<%= normal_case_files && normal_case_files[5] && normal_case_files[5].file_type === 'right_side' ? normal_case_files[5].signedurl : '/assets/images/right-side-profile.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="profile" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'right_side', 'Choose File') : 'Choose File' %>">
                                     </div>
                                 </div>
                                 
                                 <div class="photo-row">
-                                    <div class="photo-upload teeth-photo" data-type="left" style="background-image: url('<%= normal_case_files[10].file_type === 'buccal_left' ? normal_case_files[10].signedurl : '/assets/images/buccal-left.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="left" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'buccal_left', 'Choose File') %>">
+                                    <div class="photo-upload teeth-photo" data-type="left" style="background-image: url('<%= normal_case_files && normal_case_files[10] && normal_case_files[10].file_type === 'buccal_left' ? normal_case_files[10].signedurl : '/assets/images/buccal-left.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="left" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'buccal_left', 'Choose File') : 'Choose File' %>">
                                     </div>
-                                    <div class="photo-upload teeth-photo" data-type="front" style="background-image: url('<%= normal_case_files[9].file_type === 'buccal_center' ? normal_case_files[9].signedurl : '/assets/images/bretracted-anterior-frontal.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="front" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'buccal_center', 'Choose File') %>">
+                                    <div class="photo-upload teeth-photo" data-type="front" style="background-image: url('<%= normal_case_files && normal_case_files[9] && normal_case_files[9].file_type === 'buccal_center' ? normal_case_files[9].signedurl : '/assets/images/bretracted-anterior-frontal.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="front" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'buccal_center', 'Choose File') : 'Choose File' %>">
                                     </div>
-                                    <div class="photo-upload teeth-photo" data-type="right" style="background-image: url('<%= normal_case_files[8].file_type === 'buccal_right' ? normal_case_files[8].signedurl : '/assets/images/buccal-right.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="right" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'buccal_right', 'Choose File') %>">
+                                    <div class="photo-upload teeth-photo" data-type="right" style="background-image: url('<%= normal_case_files && normal_case_files[8] && normal_case_files[8].file_type === 'buccal_right' ? normal_case_files[8].signedurl : '/assets/images/buccal-right.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="right" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'buccal_right', 'Choose File') : 'Choose File' %>">
                                     </div>
-                                    <div class="photo-upload teeth-photo" data-type="upper" style="background-image: url('<%= normal_case_files[6].file_type === 'buccal_top' ? normal_case_files[6].signedurl : '/assets/images/mandibular-occlusal.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="upper" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'buccal_top', 'Choose File') %>">
+                                    <div class="photo-upload teeth-photo" data-type="upper" style="background-image: url('<%= normal_case_files && normal_case_files[6] && normal_case_files[6].file_type === 'buccal_top' ? normal_case_files[6].signedurl : '/assets/images/mandibular-occlusal.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="upper" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'buccal_top', 'Choose File') : 'Choose File' %>">
                                     </div>
-                                    <div class="photo-upload teeth-photo" data-type="lower" style="background-image: url('<%= normal_case_files[7].file_type === 'buccal_bottom' ? normal_case_files[7].signedurl : '/assets/images/maxillary-occlusal.png' %>'); background-size: cover; background-position: center;">
-                                        <input type="file" id="lower" accept="image/*" style="display: none;" value="<%= getFileNameOrPlaceholder(normal_case_files, 'buccal_bottom', 'Choose File') %>">
+                                    <div class="photo-upload teeth-photo" data-type="lower" style="background-image: url('<%= normal_case_files && normal_case_files[7] && normal_case_files[7].file_type === 'buccal_bottom' ? normal_case_files[7].signedurl : '/assets/images/maxillary-occlusal.png' %>'); background-size: cover; background-position: center;">
+                                        <input type="file" id="lower" accept="image/*" style="display: none;" value="<%= normal_case_files ? getFileNameOrPlaceholder(normal_case_files, 'buccal_bottom', 'Choose File') : 'Choose File' %>">
                                     </div>
                                 </div>
                             </div>
